# dynamic-bitvector

./: CMakeLists.txt  GenerateTests.cpp  README.md  bitutils.h  main.cpp  myassert.h  testutils.h
DynamicBitVector/: Data.cpp  Test.cpp  dynamicbitvector.h  samevaluearray.h
Tester/: dynamicbitvector.h  test1.cpp
testgenerators/: generator1.cpp
